<resources>
    <string name="app_name">Ez Taskz</string>
    <string name="taskz">Tasks</string>
    <string name="newtask">New Task</string>
    <string name="edittask">Edit Task</string>
    <string name="tskname">Task Title</string>
    <string name="time">Time</string>
    <string name="date">Date</string>
    <string name="desc">Description</string>
    <string name="priority">Priority</string>
    <string name="priority1">Priority : </string>
    <string name="save">Save</string>
    <string name="update">Update</string>
    <string name="category">Category</string>
    <string-array name="priority_array">
        <item>High</item>
        <item>Medium</item>
        <item>Low</item>
    </string-array>
</resources>